--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@vercel/analytics": "^1.3.2",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "chart.js": "^4.4.3",
